--- a/src/Components/Foodhome/Foodhome.css
+++ b/src/Components/Foodhome/Foodhome.css
@@ -172,15 +172,26 @@
     }
   }
   @media (max-width:550px) {
+    .foodhome-background  {
+      height: 170vh;
+    }
+    .foodhome-background .foodhome-image {
+      height: 170vh;
+    }
     .foodhome-top img {
       width: 100%;
-      max-width: 150px;
-      height: 160px;
+      max-width: 100px;
+      height: 120px;
     }
   }
   @media (max-width:470px) {
     .foodhome-bottom p  {
       font-size: 17px;
+    }
+    .foodhome-top img {
+      width: 100%;
+      max-width: 90px;
+      height: 110px;
     }
   }
   
