--- a/src/Components/Hero/Hero.css
+++ b/src/Components/Hero/Hero.css
@@ -7,12 +7,11 @@
 
 .hero {
     margin-bottom: 5%;
-
     display:flex;
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 89vh;
+    height: 100vh;
     position: relative;
 }  
 
@@ -271,7 +270,65 @@ nav img {
     }
 
 }
+@media (max-width:550px) {
+    .hero {
+        margin-bottom: 10%;
+        width: 100%;        
+        height:100vh;
+    }
+    nav {
+        width: 100%;
+        height: 10%;
+    }  
+    nav #logo {
+        color: white;
+        font-size: 60px;
+    }
+    nav #logo h6 {
+        color: white;
+        font-size: 14px;
+        font-weight: 600;
+        letter-spacing: 1px;
+    }
+    nav ul li{
+        list-style: none;
+        display: inline-block;
+        margin-left:40px;
+        text-decoration: none;
+        color: white;
+        font-size: 14px;
+    }
+    nav ul li .links{
+        text-decoration: none;
+        color: white;
+        font-size: 15px;
+        font-weight: 500;
+        transition: 1s;
+    }  
+    .content h1 {
+        margin-bottom: 20px;
+        color: white;
+        font-size:23px;
+        font-weight: 700;
+ 
+    }
+    .content p {
+        font-size: 23px;
+    }
+    .content a {
+        padding: 10px;
+        font-size: 17px;
+        font-weight: 600;
+    }
 
+}
+@media (max-width:270px)  {
+    .hero {
+        margin-bottom: 10%;
+        width: 100%;        
+        height:150vh;
+    }
+}
 
 
 
